Make PaintController::IsSkippingCache return true for transient types.

This patch ensures that IsSkippingCache, which is the only public
indicator that we might skip a cache, to return true if the paint
controller is transient. This ensures that DCHECKs that verify the
caches don't fire if they are guarded by IsSkippingCache checks.

R=pdr@chromium.org, chrishtr@chromium.org

Bug: 869809
Cq-Include-Trybots: luci.chromium.try:linux_layout_tests_slimming_paint_v2;master.tryserver.blink:linux_trusty_blink_rel
Change-Id: I1051609f65588dbef31e6d2b81e77d16752d2982
Reviewed-on: https://chromium-review.googlesource.com/1161057
Reviewed-by: Chris Harrelson <chrishtr@chromium.org>
Commit-Queue: vmpstr <vmpstr@chromium.org>
Cr-Commit-Position: refs/heads/master@{#580322}
Former-commit-id: 0dd3f68274a4dc9e86398dae9d3e4862e644e543